ecmascript/parser/tests/typescript-errors/tsc/types/spread/objectSpreadNegativeParse/input.ts.stderr
error: Unexpected token `}`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/typescript-errors/tsc/types/spread/objectSpreadNegativeParse/input.ts:2:18
  |
2 | let o7 = { ...o? };
  |                  ^

